libsepol: visually separate Debian and Bolt patches

--- a/s/libsepol/package.xml
+++ b/s/libsepol/package.xml
@@ -33,7 +33,9 @@
         
         <patches>
             <patchset subdir="sources">
+                <!-- Debian -->
                 <file src="patches/fix_use-after-free_python3.patch"/>
+                <!-- Bolt OS -->
                 <file src="patches/makefile-no-ln-sf-relative.patch"/>
             </patchset>
         </patches>
