--- a/c/libcap-ng/package.xml
+++ b/c/libcap-ng/package.xml
@@ -6,17 +6,17 @@
 
     <source name="libcap-ng" architecture-independent="false">
         <description>
-	    <summary>An alternate POSIX capabilities library</summary>
-	    <p>
-	    This library implements the user-space interfaces to the POSIX
-	    1003.1e capabilities available in Linux kernels. These capabilities are
-	    a partitioning of the all powerful root privilege into a set of distinct
-	    privileges.
-	    </p>
-	    <p>
-	    The libcap-ng library is intended to make programming with POSIX
-	    capabilities much easier than the traditional libcap library.
-	    </p>
+            <summary>Development and header files for libcap-ng</summary>
+            <p>
+            This library implements the user-space interfaces to the POSIX
+            1003.1e capabilities available in Linux kernels. These capabilities are
+            a partitioning of the all powerful root privilege into a set of distinct
+            privileges.
+            </p>
+            <p>
+            The libcap-ng library is intended to make programming with POSIX
+            capabilities much easier than the traditional libcap library.
+            </p>
         </description>
 
         <sources>
@@ -34,10 +34,9 @@
         </patches>
 
         <requires>
-            <package name="autoconf"/>
             <package name="autotools-dev"/>
             <package name="libattr1-dev"/>
-            <package name="linux-kernel-headers"/>
+            <package name="linux-system-headers"/>
         </requires>
 
         <xi:include href="rules.xml"/>
