--- a/r/readline/package.xml
+++ b/r/readline/package.xml
@@ -21,12 +21,13 @@
         <sources>
             <file src="readline-7.0.tar.gz" subdir="sources"
                 sha256sum="750d437185286f40a369e1e4f4764eda932b9459b5ec9a731628393dd3d32334"/>
-            <file src="patches.01.tar.gz" subdir="patches"
-                sha256sum="49bab59c4ce9475c936a188b9535032557392fa1fa8020484c1daaea64b5b55f"/>
+            <file src="patches.02.tar.gz" subdir="patches"
+                sha256sum="015a3a6ffe76babfc7b45ec1f8cefda265be1d7a4fd45ad62f042348e81b0a80"/>
         </sources>
         
         <patches>
             <patchset subdir="sources">
+                <file src="patches/readline70-001.diff"/>
                 <file src="patches/rl-attribute.diff"/>
                 <file src="patches/rl-header.diff"/>
                 <file src="patches/rl-no-cross-check.diff"/>
@@ -41,16 +42,11 @@
         </patches>
 
         <requires>
-            <package name="debhelper" version=">= 9"/>
             <package name="libtinfo-dev"/>
-            <package name="lib32tinfo-dev"/>
             <package name="libncursesw5-dev" version=">= 5.6"/>
-            <package name="lib32ncursesw5-dev"/>
-            <package name="lib64ncurses5-dev"/>
             <package name="awk"/>
             <package name="texinfo"/>
             <package name="autotools-dev"/>
-            <package name="gcc-multilib"/>
         </requires>
 
         <xi:include href="rules.xml"/>
