--- a/f/libffi/package.xml
+++ b/f/libffi/package.xml
@@ -6,11 +6,7 @@
 
     <source name="libffi" architecture-independent="false">
         <description>
-            <summary>Foreign Function Interface library (development files)</summary>
-            <p>
-            This package contains the headers and static library files necessary for
-            building programs which use libffi.
-            </p>
+            <summary>Foreign Function Interface library</summary>
             <p>
             A foreign function interface is the popular name for the interface that
             allows code written in one language to call code written in another
@@ -36,7 +32,6 @@
         </patches>
 
         <requires>
-            <package name="autoconf"/>
             <package name="libltdl-dev"/>
             <package name="dejagnu"/>
             <package name="texinfo"/>
