--- a/b/bzip2/package.xml
+++ b/b/bzip2/package.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
-    <defines>
-        <def name="BOLT_BUILD_DIR" value="build"/>
-    </defines>
-
     <source name="bzip2" architecture-independent="false">
         <description>
             <summary>high-quality block-sorting file compressor library</summary>
@@ -29,8 +25,8 @@
         <sources>
             <file src="bzip2-1.0.6.tar.bz2" subdir="sources"
                 sha256sum="d70a9ccd8bdf47e302d96c69fecd54925f45d9c7b966bb4ef5f56b770960afa7"/>
-            <file src="patches.08.tar.gz" subdir="patches"
-                sha256sum="fd1ad06b76297ea1b1d83417873e18bb9d497d8c6ec5767c5bec58f1a404c63c"/>
+            <file src="patches.8.1.tar.gz" subdir="patches"
+                sha256sum="442e83d7e876dcb244b287f9a952908705168b9e19153e72350833c21058563d"/>
         </sources>
         
         <patches>
@@ -38,6 +34,7 @@
                 <file src="patches/10-bzip2.1.patch"/>
                 <file src="patches/20-legacy.patch"/>
                 <file src="patches/30-bzip2-harden.patch"/>
+                <file src="patches/bzip2recover-CVE-2016-3189.patch"/>
             </patchset>
         </patches>
 
