--- a/t/tar/package.xml
+++ b/t/tar/package.xml
@@ -47,6 +47,7 @@
     </source>
 
     <xi:include href="tar.xml"/>
+    <xi:include href="tar-scripts.xml"/>
 
     <xi:include href="changelog.xml"/>
 </control>
