--- a/m/musl-utils/package.xml
+++ b/m/musl-utils/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="musl-fts" architecture-independent="false">
+    <source name="musl-utils" architecture-independent="false">
         <description>
             <summary>musl Libc Auxiliary Utilities</summary>
             <p>
