--- a/g/gcc/6/package.xml
+++ b/g/gcc/6/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="gcc-6" architecture-independent="false">
+    <source name="gcc-6">
         <description>
             <summary>GCC, the GNU Compiler Collection (base package)</summary>
             <p>
@@ -144,10 +144,66 @@
             </patchset>
         </patches>
 
-        <!-- build rules -->
+        <requires>
+            <package name="libc6.1-dev" version=">= 2.13-5"/>
+            <package name="libc6-dev" version=">= 2.13-31"/>
+            <package name="m4"/>
+            <package name="libtool"/>
+            <package name="autoconf2.64"/>
+            <package name="libunwind7-dev" version=">= 0.98.5-6"/>
+            <package name="libatomic-ops-dev"/>
+            <package name="autogen"/>
+            <package name="gawk"/>
+            <package name="lzma"/>
+            <package name="xz-utils"/>
+            <package name="patchutils"/>
+            <package name="zlib1g-dev"/>
+            <package name="systemtap-sdt-dev"/>
+            <package name="binutils" version=">= 2.28-3"/>
+            <package name="gperf" version=">= 3.0.1"/>
+            <package name="bison" version=">= 1:2.3"/>
+            <package name="flex"/>
+            <package name="gettext"/>
+            <package name="gdb"/>
+            <package name="texinfo" version=">= 4.3"/>
+            <package name="sharutils"/>
+            <package name="procps"/>
+            <package name="python"/>
+            <package name="libffi-dev"/>
+            <package name="fastjar"/>
+            <package name="libmagic-dev"/>
+            <package name="zip"/>
+            <package name="g++-6"/>
+            <package name="netbase"/>
+            <package name="libisl-dev" version=">= 0.14"/>
+            <package name="libmpc-dev" version=">= 1.0"/>
+            <package name="libmpfr-dev" version=">= 3.0.0-9~"/>
+            <package name="libgmp-dev" version=">= 2:5.0.1~"/>
+            <package name="dejagnu"/>
+            <package name="realpath" version=">= 1.9.12"/>
+            <package name="chrpath"/>
+            <package name="pkg-config"/>
+            <package name="libgc-dev"/>
+        </requires>
+
         <xi:include href="rules.xml"/>
     </source>
 
-    <!-- changelog -->
+    <xi:include href="cpp-6.xml"/>
+    <xi:include href="fixincludes.xml"/>
+    <xi:include href="g++-6.xml"/>
+    <xi:include href="gcc-6.xml"/>
+    <xi:include href="gcc-6-base.xml"/>
+    <xi:include href="gcc-6-plugin-dev.xml"/>
+    <xi:include href="libatomic1.xml"/>
+    <xi:include href="libcc1-0.xml"/>
+    <xi:include href="libcilkrts5.xml"/>
+    <xi:include href="libgcc.xml"/>
+    <xi:include href="libgcc-dev.xml"/>
+    <xi:include href="libgomp1.xml"/>
+    <xi:include href="libitm1.xml"/>
+    <xi:include href="libstdc++-6-dev.xml"/>
+    <xi:include href="libstdc++6.xml"/>
+
     <xi:include href="changelog.xml"/>
-</control> 
+</control>
